gitops/clusters/homelab/apps/opencloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencloud
  namespace: opencloud
  labels:
    app: opencloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencloud
  template:
    metadata:
      labels:
        app: opencloud
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-vm-still-fawn
      containers:
        - name: opencloud
          image: opencloudeu/opencloud-rolling:latest
          securityContext:
            runAsUser: 0
          command: ["/bin/sh", "-c", "opencloud init || true; opencloud server"]
          ports:
            - containerPort: 9200
          volumeMounts:
            - mountPath: /etc/opencloud
              name: config
            - mountPath: /var/lib/opencloud
              name: data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: opencloud-config
        - name: data
          hostPath:
            path: /mnt/smb_data/opencloud/data
            type: DirectoryOrCreate
        - name: opencloud-root
          hostPath:
            path: /mnt/smb_data/opencloud
            type: DirectoryOrCreate
