gitops/clusters/homelab/apps/opencloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencloud-ingress
  namespace: opencloud
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: opencloud.app.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opencloud
            port:
              number: 9200
